tests/frontend/fail/array/out_of_bounds_calldata2.act
constructor of B
interface constructor()

creates

  uint x := 0
  int[3] y := [0,0,0]


behaviour f of B
interface f(uint[3][2][2] c)

storage

  x => c[4][3][2]


behaviour g of B
interface g(uint[3][2][2] c)

storage

  y[c[0][0][0]] => 1
